fix searchbar sidebar overlap

--- a/app/assets/stylesheets/components.css.less
+++ b/app/assets/stylesheets/components.css.less
@@ -443,7 +443,7 @@ a.anchor {
     display: flex;
     flex-direction: column;
     position: relative;
-    z-index: 2;
+    z-index: 1;
     font-size: 18px;
     min-height: 36px;
     width: 100%;
